Fixed head height warning

--- a/pdf/project1.tex
+++ b/pdf/project1.tex
@@ -42,6 +42,7 @@
 \fancyhf{}
 \fancyhead[C]{\hwTitle \hfill \thepage}
 \fancyfoot[C]{\name \hfill \class}
+\setlength{\headheight}{14.5pt} % set head height
 \renewcommand{\headrulewidth}{0.4pt} % default is 0pt
 \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
  
